<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2016 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.android.ebsearch.MainActivity">

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyword"
        android:textColor="@color/colorBlue"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/bookInput"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/error_keyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_keyword"
        android:textStyle="italic"
        android:visibility="gone"
        android:textColor="@android:color/holo_red_light" />

    <TextView
        android:id="@+id/priceRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priceRange"
        android:textColor="@color/colorBlue"
        android:layout_marginVertical="5dp"/>
    <LinearLayout
        android:id="@+id/foo22"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left">

        <EditText
            android:id="@+id/priceMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint_min"
            android:inputType="number"
            android:layout_marginRight="30dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/priceMax"
            android:inputType="number"
            android:hint="@string/input_hint_max"/>
    </LinearLayout>
    <TextView
        android:id="@+id/error_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_price"
        android:textStyle="italic"
        android:visibility="gone"
        android:textColor="@android:color/holo_red_light" />

    <TextView
        android:id="@+id/conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/condition"
        android:layout_marginVertical="5dp"
        android:textColor="@color/colorBlue" />

    <LinearLayout
        android:id="@+id/foo1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBoxNew"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="New"

            android:textSize="16sp"
            android:textStyle="italic" />

        <CheckBox
            android:id="@+id/checkBoxUsed"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="Used"
            android:textSize="16sp"
            android:textStyle="italic" />

        <CheckBox
            android:id="@+id/checkBoxUnspecified"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:text="Unspecified"
            android:textSize="16sp"
            android:textStyle="italic" />
    </LinearLayout>


    <TextView
        android:id="@+id/sortBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textColor="@color/colorBlue"
        android:layout_marginVertical="5dp"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_marginTop="5dp"
        android:layout_width="358dp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/foo21"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/searchButton"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:background="@color/colorBlue"
            android:onClick="searchBooks"
            android:text="@string/button_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:background="@color/colorBlue"
            android:onClick="clear"
            android:text="CLEAR"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleText"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/authorText"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

</LinearLayout>
